--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "author": "Andre 'Staltz' Medeiros <contact@staltz.com>",
   "license": "Unlicense",
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "bipf": "^1.5.3",
     "cpy-cli": "^3.1.1",
+    "nodemon": "^2.0.15",
     "tap-spec": "^5.0.0",
-    "tape": "^5.3.2",
-    "nodemon": "^2.0.15"
+    "tape": "^5.3.2"
   }
 }
